# autoagent-vnextcc

./: .gitignore  AGENTLAB_BUG_BACKLOG.md  AGENTLAB_MASTER_DOCUMENT_2026-04-18.md  AGENTLAB_VALUE_CHAIN_AUDIT.md  ARCHITECTURE_OVERVIEW.md  ASSISTANT_IMPLEMENTATION_SUMMARY.md  AUTOAGENT.md  BUILDER_CONTRACT.md  CHANGELOG.md  CLI_FINDINGS_LIVE.md  CODEX_POLISH_PROMPT.md  CX_INTEGRATION_BRIEF.md  Dockerfile  GHOSTWRITER_FEATURE_MAP.md  GHOSTWRITER_REVIEW_PROMPT.md  HARNESS_ENGINEERING_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_VP_DEMO.md  JOURNEY_AUDIT_REPORT.md  JOURNEY_AUDIT_REPORT_LATEST.md  KARPATHY_BUILD_PROMPT.md  LOOP_LOG.md  MERGE_STRATEGY.md  Makefile  OPTIMIZATION_COMPONENTS_AUDIT.md  P0_FIX_REPORT.md  PLAN.md  PM_ROADMAP_REPORT.md  PORT_PROMPT.md  PRODUCT_BRIEF.md  PROMPT.md  PROMPT_OPTIMIZATION_BRIEF.md  README.md  SKILLS_REVIEW_PROMPT.md  TESTING_NOTES.md  TRACK_C_IMPLEMENTATION_SUMMARY.md  TRACK_D_DEMO.md  UI_FINDINGS.md  UI_FINDINGS_LIVE.md  UX_GOLDEN_PATH_BRIEF.md  (+12 more)
.autoagent/: loop_checkpoint.json
.playwright-cli/: page-2026-03-29T19-15-01-659Z.yml  page-2026-03-29T19-15-04-961Z.yml  page-2026-03-29T19-15-24-586Z.yml  page-2026-03-29T19-15-40-204Z.yml  page-2026-03-29T19-15-44-233Z.yml  page-2026-03-29T19-29-40-842Z.yml  page-2026-03-29T19-29-56-136Z.yml  page-2026-03-29T19-39-27-805Z.yml  page-2026-03-29T19-39-31-407Z.yml  page-2026-03-29T19-40-12-802Z.yml
.tmp/: cli-help.txt  golden_path_full.mjs  golden_path_probe.mjs  legacy_autoagent_migrated.yaml  live-hotel-agent-summary.json  quickstart-verify.sh  tmpkdj9_tjx.json  tmps0zyq2yb.json  tmpyd66h2ok.json  tmpzl8f5iqq.json  workbench_handoff_probe.mjs
a2a/: __init__.py  agent_card.py  client.py  server.py  task.py  types.py
adapters/: __init__.py  anthropic_claude.py  base.py  cx_agent_mapper.py  cx_studio_client.py  http_webhook.py  openai_agents.py  transcript.py  workspace_builder.py
adk/: __init__.py  agent_garden.py  agent_lineage.py  callbacks.py  drift_detector.py  exporter.py  identity.py  importer.py  mapper.py  memory_bank.py  oauth.py  parser.py  portability.py  runtime.py  scaffold.py  session.py  state.py  streaming.py  template_vars.py  test_harness.py  types.py  vertex_engine.py
agent/: __init__.py  dashboard_data.py  eval_agent.py  instruction_builder.py  migrate_to_xml.py  root_agent.py  server.py  skill_runtime.py  tracing.py
agent_card/: __init__.py  converter.py  persistence.py  renderer.py  schema.py
agent_skills/: coordinator_worker.py  store.py
api/: audit.py  auth.py  billing.py  environments.py  main.py  metering.py  models.py  multi_tenant.py  optimize_event_bus.py  rbac.py  runtime_state.py  secrets.py  server.py  server.py.bak  sla.py  tasks.py  teams.py  websocket.py  workspace_state.py
assistant/: README.md  __init__.py  agent_generator.py  archetypes.py  builder.py  cards.py  conversation.py  eval_pack_generator.py  events.py  explorer.py  file_processor.py  intent_extractor.py  orchestrator.py
builder/: __init__.py  chat_service.py  chat_types.py  contract.py  coordinator_runtime.py  coordinator_turn.py  eval_workers.py  event_replay.py  events.py  execution.py  harness.py  llm_worker.py  model_resolver.py  orchestrator.py  skill_invocation_worker.py  skill_runtime.py  specialists.py  store.py  types.py  workbench.py  workbench_agent.py  workbench_bridge.py  workbench_plan.py  workbench_prompts.py  worker_adapters.py  worker_mode.py  worker_prompts.py  workspace_config.py
cicd/: README.md  __init__.py  gate.py  github_action.yml
cli/: __init__.py  auto_harness.py  bootstrap.py  branding.py  doctor_sections.py  errors.py  eval_render.py  exit_codes.py  experiment_log.py  harness_doctor.py  harness_onboarding.py  harness_status.py  init_flow.py  intelligence.py  json_envelope.py  mode.py  (+26 more)
(+3699 files in other folders)
